--- a/Projects/BoardGames/Sudoku/sudoku.css
+++ b/Projects/BoardGames/Sudoku/sudoku.css
@@ -1,20 +1,36 @@
 body
 {	background-color : #fef6dd;
 	text-align:center;
-}
-table
+} 
+
+.cell , .numPadCell
 {
-	margin: auto;
-}
-td button
-{
-	font-size : 25px;
+	font-size : 30px;
 	width: 60px;
 	height: 60px;
-	border-radius: 20%;
 	border: 1px solid black;
-	background-color : #aaa; 
 }
+.numPadCell:active , .numPadClearCell:active
+{
+	background-color:darksalmon;
+}
+.numPadClearCell
+{
+	font-size : 20px;
+	width: 100%; 
+	height: 50px;
+	border: 1px solid black;
+}
+
+.selectedCell
+{
+	background-color:darksalmon;
+}
+
+.initCells
+{
+	font-weight: 850;
+} 
 
 #theBoard
 {
@@ -28,10 +44,6 @@ td button
 	height: 70px;
 	font-size: 20px;
 }
-button:active
-{
-	background-color: grey;
-}
 
 #controls
 {	background-color : #dea6af;
@@ -39,15 +51,9 @@ button:active
 	border: 1px solid black;
 	width:	700px;
 	margin:auto;
-}
-#markMine
-{	
-	width:	22px;
-	height: 22px;
-	cursor: pointer;
-}
+} 
 
-#controls
+.controls ,.startControls
 {
 	background-color : #ff5e6c;
 	font-size: 22px;
@@ -58,21 +64,82 @@ button:active
 	padding:20px;
 	margin:auto;
 }
-#instruct
+.startControls
+{
+	left : 10%;
+	top: 200px;
+}
+
+.instruct
 {
 	background-color : #fff5d7;
-	padding : 30px;
-	font-size: 30px;
+	padding : 15px;
+	font-size: 25px;
 	font-weight: bold;
 }
 
+.btnDiff
+{
+	width: 100px;
+}
 
-@media (max-width: 1200px) {
+#btnStartGame, #btnResetGame
+{
+	font-size: 22px;
+	width: 48%;
+}
 
-	#controls
+@media (max-width: 1200px) 
+{
+	.controls , .startControls
 	{
 		position : absolute;
-		top: 800px;
+		top: 650px;
 		left : 10%;
+		width: 500px;
+		font-size: 20px;
+		margin-bottom: 20px;
 	}
-  }
+	.startControls
+	{
+		top: 200px;
+	}
+	.btnDiff
+	{
+		width: 80px;
+	}
+	.instruct
+	{
+		background-color : #fff5d7;
+		padding : 10px;
+		font-size: 20px;
+		font-weight: bold;
+	}
+}
+
+@media (max-width: 768px) 
+{
+	.cell , .numPadCell
+	{
+		font-size : 20px;
+		width: 40px;
+		height: 40px;
+	}
+	.controls , .startControls
+	{
+		position : absolute;
+		top: 520px;
+		left : 5%;
+		width: 400px;
+		font-size: 20px;
+	}
+	.startControls
+	{
+		top: 200px;
+	}
+	#btnStartGame, #btnResetGame
+	{
+		font-size: 15px;
+		width: 48%;
+	}
+}
