--- a/Projects/BoardGames/BoardGames.css
+++ b/Projects/BoardGames/BoardGames.css
@@ -11,7 +11,7 @@ body
     width:100%;
     z-index: -5;
     min-height: 80%;
-}	
+}
 #desktopNav
 {
     display: block;
@@ -20,6 +20,15 @@ body
 {
     display: none;
 }	
+
+.game-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 85%;
+    justify-content: space-evenly;
+}
+
 
 .footer {
     position: fixed;
@@ -46,29 +55,30 @@ body
 {
     position: fixed;
     width: 110%;
-    margin: 2%;
-    height: 500px;
+    height: calc(100vh - 200px);
     overflow-y:auto;
 }
 
 .searchLink
-{
-    display: inline-block;
+{   
+    display: flex;
     font-size: 22px;
     height: 175px;
     width: 200px;
     margin: 20px;
-    text-align: center;
-    padding-top: 70px;
-    background-color: rgb(0,0,0,0.5);
-    border : 2px solid white;
-    color :  white;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0,0,0,0.8);
+    border: 5px solid white;
+    color: white;
 }
 
-.searchLink:hover
+.searchLink:hover,
+.searchLink:active
 {
-    color :  white;
-    background-color: rgb(0,0,0,0.8);
+    font-size: 24px;
+    color :  #2feefc;
+    background-color: rgb(0,0,0,1.0);
     text-decoration: none;
 }
 
@@ -87,11 +97,6 @@ body
 
 @media (max-width: 565px) 
 {
-            
-    .searchLinks
-    {
-        margin: 5%;
-    }
     .searchLink
     {
         font-size: 25px;
