--- a/index.css
+++ b/index.css
@@ -1,3 +1,24 @@
+.flex-navigation {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #222;
+    width: 100%;
+    margin:0px;
+    justify-content: space-between;
+}
+
+.flex-navigation a ,
+.flex-navigation .dropdown {
+    margin: 12px;
+    text-decoration:none;
+    color:rgb(256,256,256,0.8);
+}
+.flex-navigation a:hover,
+.flex-navigation a:active {
+    text-decoration:none;
+    color:white;
+}
 
 .footer {
     position: fixed;
