--- a/Projects/BoardGames/Ludo/LudoStyle.css
+++ b/Projects/BoardGames/Ludo/LudoStyle.css
@@ -22,6 +22,10 @@ body
 	width: 48%;
 } 
 
+.btnDiff
+{
+	width: 100px;
+}
 .coin
 {
 	position: absolute;
@@ -40,7 +44,8 @@ body
 	position :absolute;
 	top:0px;left:0px;
 }
-#allControls
+
+.controls ,.startControls
 {
 	background-color : #ff5e6c;
 	font-size: 22px;
@@ -49,7 +54,19 @@ body
 	left : 55%;
 	width:	500px;
 	padding:20px;
-	margin:auto;
+}
+.startControls
+{
+	left : 10%;
+	top: 200px;
+}
+
+.instruct
+{
+	background-color : #fff5d7;
+	padding : 15px;
+	font-size: 25px;
+	font-weight: bold;
 }
 #instruct , #endInstruct
 {
@@ -100,12 +117,19 @@ body
 
 @media (max-width: 1220px) {
 
-	#allControls
+	.controls , .startControls
 	{
 		position : absolute;
-		top: 750px;
+		top: 650px;
 		left : 10%;
+		width: 500px;
+		font-size: 20px;
 	}
+	.startControls
+	{
+		top: 200px;
+	}
+
 	#instruct, #endInstruct
 	{
 		background-color : #fff5d7;
@@ -120,6 +144,13 @@ body
 		width : 150px;
 		height : 150px;
 		cursor: pointer;
+	}
+	.instruct
+	{
+		background-color : #fff5d7;
+		padding : 10px;
+		font-size: 20px;
+		font-weight: bold;
 	}
   }
   
@@ -136,11 +167,18 @@ body
 		position : relative;
 		left :5%;
 	}
-	#allControls
+
+	.controls , .startControls
 	{
-		top: 475px;
-		width : 360px;
-		left : 5%;
+		position : absolute;
+		left :5%;
+		top: 480px;
+		width: 360px;
+	}
+	
+	.startControls
+	{
+		top: 300px;
 	}
 	
 	.coin
