--- a/Projects/BoardGames/SnakeNLadder/snakeLadderStyle.css
+++ b/Projects/BoardGames/SnakeNLadder/snakeLadderStyle.css
@@ -1,3 +1,17 @@
+
+::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
+	background-color: #1f0303;
+}
+
 body
 {	background-color : #fff5d7;
 	text-align:center;
@@ -24,7 +38,7 @@ body
 	height : 50px;
 } 
 
-#allControls
+.controls ,.startControls
 {
 	background-color : #ff5e6c;
 	font-size: 22px;
@@ -33,14 +47,29 @@ body
 	left : 55%;
 	width:	500px;
 	padding:20px;
-	margin:auto;
 }
-#instruct
+.startControls
+{
+	left : 10%;
+	top: 100px;
+}
+
+.instruct
+{
+	background-color : #fff5d7;
+	padding : 15px;
+	font-size: 25px;
+	font-weight: bold;
+}
+#instruct , #endInstruct
 {
 	background-color : #fff5d7;
 	padding : 30px;
 	font-size: 36px;
 	font-weight: bold;
+
+	-webkit-text-stroke-width: 0.75px;
+    -webkit-text-stroke-color: black;
 }
 
 #theDice, .dice
@@ -49,13 +78,6 @@ body
 	width : 200px;
 	height : 200px;
 	cursor: pointer;
-}
-
-#restart, #start 
-{
-	width:	150px;
-	height: 70px;
-	font-size: 20px;
 }
 
 
@@ -102,15 +124,41 @@ body
 	padding:10px 40px;
 } 
 
+.game-btns
+{
+	margin-top:20px;
+	font-size: 22px;
+	width: 48%;
+} 
+
+.btnDiff
+{
+	width: 100px;
+}
+
 @media (max-width: 1220px) {
 
-	#allControls
+	.controls , .startControls
 	{
 		position : absolute;
-		top: 750px;
+		top: 650px;
 		left : 10%;
+		width: 500px;
+		font-size: 20px;
 	}
-	#instruct
+	.startControls
+	{
+		top: 100px;
+	}
+
+	.instruct
+	{
+		background-color : #fff5d7;
+		padding : 10px;
+		font-size: 20px;
+		font-weight: bold;
+	}
+	#instruct, #endInstruct
 	{
 		background-color : #fff5d7;
 		padding : 10px;
@@ -121,8 +169,8 @@ body
 	#theDice, .dice
 	{
 		margin:auto;
-		width : 150px;
-		height : 150px;
+		width : 100px;
+		height : 100px;
 		cursor: pointer;
 	}
   }
@@ -140,10 +188,23 @@ body
 		position : relative;
 		left :5%;
 	}
-	#allControls
+
+	.controls , .startControls
 	{
-		top: 550px;
-		width : 360px;
-		left : 5%;
+		position : absolute;
+		left :5%;
+		top: 480px;
+		width: 360px;
+	}
+	
+	.startControls
+	{
+		top: 100px;
+	}
+	
+	.game-btns
+	{
+		font-size: 15px;
+		width: 48%;
 	}
   }
