--- a/Projects/BoardGames/Ludo/LudoStyle.css
+++ b/Projects/BoardGames/Ludo/LudoStyle.css
@@ -34,12 +34,24 @@ body
 	margin-top:20px;
 	font-size: 22px;
 	width: 48%;
-} 
+}
 
+.btn-group {
+	width:100%;
+	display: flex;
+	justify-content: space-evenly;
+}
 .btnDiff
 {
-	width: 100px;
+	font-size: 20px;;
+	width:30%;
 }
+.btnDiff.active {
+	pointer-events:none;
+	background-color: rgba(255,245,215, 0.8);
+	border:3px solid Green;
+}
+
 .coin
 {
 	position: absolute;
@@ -72,7 +84,7 @@ body
 .startControls
 {
 	left : 10%;
-	top: 200px;
+	top: 100px;
 }
 
 .instruct
@@ -114,7 +126,6 @@ body
 	font-size: 20px;
 }
 
-
 .dropdown {
 	position: relative;
 	display: inline-block;
@@ -134,14 +145,14 @@ body
 	.controls , .startControls
 	{
 		position : absolute;
-		top: 650px;
+		top: 720px;
 		left : 10%;
-		width: 500px;
+		width: 600px;
 		font-size: 20px;
 	}
 	.startControls
 	{
-		top: 200px;
+		top: 100px;
 	}
 
 	.instruct
@@ -192,7 +203,8 @@ body
 	
 	.startControls
 	{
-		top: 300px;
+		width: 90%;
+		top: 150px;
 	}
 	
 	.coin
@@ -211,10 +223,7 @@ body
 		height : 100px;
 		cursor: pointer;
 	}
-
-	.game-btns
-	{
-		font-size: 15px;
-		width: 48%;
+	.game-btns {
+		font-size: 16px;;
 	}
 }
