--- a/Projects/BoardGames/BoardGames.css
+++ b/Projects/BoardGames/BoardGames.css
@@ -77,7 +77,7 @@ body
     color: white;
     text-align: center;
     padding-bottom: 5px;
-    padding: 0px 10px; 
+    padding: 10px; 
     font-size: 20px
 }
 
