--- a/Projects/BoardGames/Snake/snake.css
+++ b/Projects/BoardGames/Snake/snake.css
@@ -16,6 +16,26 @@ body
 {	background-color : #fef6dd;
 	text-align:center;
 }
+
+#gameUnderDev #overlay {
+	position:absolute; 
+    top: 0px;
+	z-index: 800; 
+	width:100vw;
+	height: 100vh;
+	background-color: black;
+	opacity: 0.7;
+}
+
+#gameUnderDev #img {
+	position:absolute; 
+	top:10%;
+	left:10%;  
+	width: 80%;
+	max-height:80%; 
+    z-index: 850;
+	margin:auto; 
+}
 .cell  
 {
 	font-size : 22px;
