--- a/Projects/BoardGames/BoardGames.css
+++ b/Projects/BoardGames/BoardGames.css
@@ -1,19 +1,15 @@
-
-::-webkit-scrollbar
-{
-	width: 5px;
-	background-color: #F5F5F5;
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
-	background-color: #1f0303;
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+    background-color: #1f0303;
 }
 
-body
-{
+body {
     background-color: #333;
 }
 .flex-center {
@@ -41,20 +37,19 @@ body
 .flex-navigation > div > i {
     font-size: 22px;
     margin: 10px;
-    text-decoration:none;
-    color:rgb(256,256,256,0.8);
+    text-decoration: none;
+    color: rgb(256, 256, 256, 0.8);
 }
 .flex-navigation a:hover,
 .flex-navigation a:active {
-    text-decoration:none;
-    color:white;
+    text-decoration: none;
+    color: white;
 }
 
-.backgroundImage
-{
-    position:fixed; 
-    margin-top:-20px;
-    width:100%;
+.backgroundImage {
+    position: fixed;
+    margin-top: -20px;
+    width: 100%;
     z-index: -5;
     min-height: 90%;
 }
@@ -67,7 +62,6 @@ body
     justify-content: space-evenly;
 }
 
-
 .footer {
     position: fixed;
     left: 0;
@@ -77,28 +71,25 @@ body
     color: white;
     text-align: center;
     padding-bottom: 5px;
-    padding: 10px; 
-    font-size: 20px
+    padding: 10px;
+    font-size: 20px;
 }
 
-.footerLinks
-{
+.footerLinks {
     text-decoration: inherit !important;
     color: inherit;
-    padding: 0px 10px; 
-    font-size: 22px
+    padding: 0px 10px;
+    font-size: 22px;
 }
 
-.searchLinks
-{
+.searchLinks {
     position: fixed;
     width: 110%;
     height: calc(100vh - 110px);
-    overflow-y:auto;
+    overflow-y: auto;
 }
 
-.searchLink
-{   
+.searchLink {
     display: flex;
     font-size: 22px;
     height: 175px;
@@ -106,24 +97,21 @@ body
     margin: 20px;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0,0,0,0.8);
+    background-color: rgb(0, 0, 0, 0.8);
     border: 5px solid white;
     color: white;
 }
 
 .searchLink:hover,
-.searchLink:active
-{
+.searchLink:active {
     font-size: 24px;
-    color :  #2feefc;
-    background-color: rgb(0,0,0,1.0);
+    color: #2feefc;
+    background-color: rgb(0, 0, 0, 1);
     text-decoration: none;
 }
 
-@media (max-width: 565px) 
-{
-    .searchLink
-    {
+@media (max-width: 565px) {
+    .searchLink {
         width: 90%;
     }
     #searchInput {
@@ -133,5 +121,11 @@ body
     }
     #searchForm {
         width: 60%;
+    }
+    .instruct {
+        background-color: #fff5d7;
+        padding: 10px;
+        font-size: 20px;
+        font-weight: bold;
     }
 }
