--- a/Projects/BoardGames/Sudoku/sudoku.css
+++ b/Projects/BoardGames/Sudoku/sudoku.css
@@ -1,171 +1,152 @@
-
-::-webkit-scrollbar
-{
-	width: 5px;
-	background-color: #F5F5F5;
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
-	background-color: #1f0303;
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+    background-color: #1f0303;
 }
 
-body
-{	background-color : #fef6dd;
-	text-align:center;
-} 
-
-.cell , .numPadCell
-{
-	font-size : 30px;
-	width: 60px;
-	height: 60px;
-	border: 1px solid black;
-}
-.numPadCell:active , .numPadClearCell:active
-{
-	background-color:darksalmon;
-}
-.numPadClearCell
-{
-	font-size : 20px;
-	width: 100%; 
-	height: 50px;
-	border: 1px solid black;
+body {
+    background-color: #fef6dd;
+    text-align: center;
 }
 
-.selectedCell
-{
-	background-color:darksalmon;
+.cell,
+.numPadCell {
+    font-size: 30px;
+    width: 60px;
+    height: 60px;
+    border: 1px solid black;
+}
+.numPadCell:active,
+.numPadClearCell:active {
+    background-color: darksalmon;
+}
+.numPadClearCell {
+    font-size: 20px;
+    width: 100%;
+    height: 50px;
+    border: 1px solid black;
 }
 
-.initCells
-{
-	font-weight: 850;
-} 
-
-#theBoard
-{
-	position : absolute;
-	left :10%;
+.selectedCell {
+    background-color: darksalmon;
 }
 
-#restart, #start 
-{
-	width:	150px;
-	height: 70px;
-	font-size: 20px;
+.initCells {
+    font-weight: 850;
 }
 
-#controls
-{	
-	background-color : #dea6af;
-	font-size: 22px;
-	border: 1px solid black;
-	width:	700px;
-	margin:auto;
-} 
-
-.controls ,.startControls
-{
-	background-color : #ff5e6c;
-	font-size: 22px;
-	position : absolute;
-	top: 100px;
-	left : 55%;
-	width:	500px;
-	padding:20px;
-}
-.startControls
-{
-	left : 10%;
-	top: 100px;
+#theBoard {
+    position: absolute;
+    left: 10%;
 }
 
-.instruct
-{
-	background-color : #fff5d7;
-	padding : 15px;
-	font-size: 25px;
-	font-weight: bold;
+#restart,
+#start {
+    width: 150px;
+    height: 70px;
+    font-size: 20px;
 }
 
-.game-btns
-{
-	margin-top:20px;
-	font-size: 22px;
-	width: 48%;
+#controls {
+    background-color: #dea6af;
+    font-size: 22px;
+    border: 1px solid black;
+    width: 700px;
+    margin: auto;
+}
+
+.controls,
+.startControls {
+    background-color: #ff5e6c;
+    font-size: 22px;
+    position: absolute;
+    top: 100px;
+    left: 55%;
+    width: 500px;
+    padding: 20px;
+}
+.startControls {
+    left: 10%;
+    top: 100px;
+}
+
+.instruct {
+    background-color: #fff5d7;
+    padding: 15px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.game-btns {
+    margin-top: 20px;
+    font-size: 22px;
+    width: 48%;
 }
 
 .btn-group {
-	width:100%;
-	display: flex;
-	justify-content: space-evenly;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
 }
-.btnDiff
-{
-	font-size: 20px;
+.btnDiff {
+    font-size: 20px;
 }
 .btnDiff.active {
-	pointer-events:none;
-	background-color: rgba(255,245,215, 0.8);
-	border:3px solid Green;
+    pointer-events: none;
+    background-color: rgba(255, 245, 215, 0.8);
+    border: 3px solid Green;
 }
 
-@media (max-width: 1200px) 
-{
-	.controls , .startControls
-	{
-		position : absolute;
-		top: 650px;
-		left : 10%;
-		width: 500px;
-		font-size: 20px;
-	}
-	.startControls
-	{
-		top: 100px;
-	}
-	.instruct
-	{
-		background-color : #fff5d7;
-		padding : 10px;
-		font-size: 20px;
-		font-weight: bold;
-	}
+@media (max-width: 1200px) {
+    .controls,
+    .startControls {
+        position: absolute;
+        top: 650px;
+        left: 10%;
+        width: 500px;
+        font-size: 20px;
+    }
+    .startControls {
+        top: 100px;
+    }
+    .instruct {
+        background-color: #fff5d7;
+        padding: 10px;
+        font-size: 20px;
+        font-weight: bold;
+    }
 }
 
-@media (max-width: 768px) 
-{ 
-	.cell , .numPadCell
-	{
-		font-size : 20px;
-		width: 40px;
-		height: 40px;
-	}
+@media (max-width: 768px) {
+    .cell,
+    .numPadCell {
+        font-size: 20px;
+        width: 40px;
+        height: 40px;
+    }
 
-	.controls , .startControls
-	{
-		position : absolute;
-		left :5%;
-		top: 480px;
-		width: 360px;
-	}
-	
-	.startControls
-	{
-		top: 150px;
-	}
-	
-	#theBoard
-	{
-		left : 5%;
-	}
-	
-	.game-btns
-	{
-		font-size: 15px;
-	}
-} 
+    .controls,
+    .startControls {
+        position: absolute;
+        left: 5%;
+        top: 480px;
+        width: 360px;
+    }
+
+    .startControls {
+        top: 150px;
+    }
+
+    #theBoard {
+        left: 5%;
+    }
+
+    .game-btns {
+        font-size: 15px;
+    }
+}
