--- a/Projects/BoardGames/Business/BusinessStyle.css
+++ b/Projects/BoardGames/Business/BusinessStyle.css
@@ -358,6 +358,40 @@ body {
     top: -95px;
 }
 
+/* DARK THEME -- START */
+body.dark {
+    background-color: #22272e;
+}
+body.dark .controls,
+body.dark #allControls {
+    background: #30363c;
+}
+
+body.dark .btn-default {
+    color: #adbac7;
+    background: #373e47;
+    border-color: #ccc;
+}
+body.dark .btn-default:hover {
+    color: white;
+    background: #444c56;
+    border-color: white;
+}
+body.dark .instruct,
+body.dark .playerData {
+    color: white;
+    background: #22272e;
+}
+body.dark .currChanceData {
+    background: #495056;
+    border: 1px solid red;
+}
+body.dark .btnDiff.active {
+    color: black;
+    background: #fff5d7cc;
+}
+/* DARK THEME -- END */
+
 @media (max-width: 1285px) {
     #allControls {
         position: absolute;
