--- a/Projects/BoardGames/Wordle/wordle.css
+++ b/Projects/BoardGames/Wordle/wordle.css
@@ -129,6 +129,30 @@ body {
     font-size: 14px;
 }
 
+/* DARK THEME -- START */
+body.dark {
+    background-color: #22272e;
+}
+body.dark .controls {
+    background: #30363c;
+}
+
+body.dark .btn-default {
+    color: #adbac7;
+    background: #373e47;
+    border-color: #ccc;
+}
+body.dark .btn-default:hover {
+    color: white;
+    background: #444c56;
+    border-color: white;
+}
+body.dark .instruct {
+    color: white;
+    background: #22272e;
+}
+/* DARK THEME -- END */
+
 @media (max-width: 950px) {
     .game > .controls,
     .game > #theBoard {
