--- a/Projects/BoardGames/DealOrNoDeal/DealNoDealStyle.css
+++ b/Projects/BoardGames/DealOrNoDeal/DealNoDealStyle.css
@@ -1,54 +1,46 @@
-
-::-webkit-scrollbar
-{
-	width: 5px;
-	background-color: #F5F5F5;
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
-	background-color: #1f0303;
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+    background-color: #1f0303;
 }
 
-body
-{	background-color : #fef6dd;
-	text-align:center;
-} 
+body {
+    background-color: #fef6dd;
+    text-align: center;
+}
 
-.amts
-{ 
+.amts {
     height: 50px;
-	background-color: #f6b40a;
+    background-color: #f6b40a;
     border: 1px solid black;
     padding-top: 10px;
     font-weight: 600;
     font-size: 20px;
 }
 
-.lowerAmts
-{
-    border-top-right-radius: 25px !important; 
-    border-bottom-right-radius: 25px !important; 
-    box-shadow: 5px 5px #888888;
+.lowerAmts {
+    border-top-right-radius: 25px !important;
+    border-bottom-right-radius: 25px !important;
+    box-shadow: 5px 5px 2px 0px black;
 }
 
-.higherAmts
-{
-    border-top-left-radius: 25px !important; 
-    border-bottom-left-radius: 25px !important; 
-    box-shadow: 5px 5px #888888;
+.higherAmts {
+    border-top-left-radius: 25px !important;
+    border-bottom-left-radius: 25px !important;
+    box-shadow: 5px 5px black;
 }
 
-.lostAmt
-{
+.lostAmt {
     background: #625c17;
     opacity: 80%;
 }
 
-.case
-{
+.case {
     width: 16%;
     height: 100px;
     margin: 6px 2px;
@@ -57,75 +49,97 @@ body
     font-weight: 500;
     cursor: pointer;
 }
-.caseLost
-{
-    background: #d0e7b5;
-    opacity: 80%;
+
+.caseLost {
+    visibility: hidden;
 }
-.caseLost:hover
-{
-    background: #d0e7b5;
-    opacity: 80%;
-}
-.instruct
-{
+.instruct {
     color: #fff;
-	background-color : #ff5e6c;
+    background-color: #ff5e6c;
     font-size: 22px;
-    width:100%;
+    width: 100%;
     min-height: fit-content;
 }
 
-.caseOpening
-{
+.caseOpening {
     position: absolute;
     top: 50px;
     left: 25%;
-    padding: 50px ;
-    width: 50%; 
-    min-width: 250px; 
-    height: 150px; 
+    padding: 50px;
+    width: 50%;
+    min-width: 250px;
+    height: 150px;
 }
-.caseInside
-{
-    background-color:#bbffca;
-    color:black;
+.caseInside {
+    background-color: #bbffca;
+    color: black;
     z-index: 2;
-    font-size:25px; 
+    font-size: 25px;
 }
-.caseOutside{
-    background-color:#3abb56;
-    color:white;
+.caseOutside {
+    background-color: #3abb56;
+    color: white;
     z-index: 5;
-    font-size:40px; 
+    font-size: 40px;
 }
 
+/* DARK THEME -- START */
+body.dark {
+    background: #22272e;
+}
+body.dark .amts {
+    color: white;
+    background-color: #7a5e15;
+}
+body.dark .case {
+    background: #366636;
+}
+body.dark .case[disabled] {
+    background: #f0ad4e;
+}
 
-@media (max-width: 1000px) 
-{
-    .case
-    {
+body.dark .controls,
+body.dark .startControls {
+    background: #30363c;
+}
+
+body.dark .btn-default {
+    color: #adbac7;
+    background: #373e47;
+    border-color: #ccc;
+}
+body.dark .btn-default:hover {
+    color: white;
+    background: #444c56;
+    border-color: white;
+}
+body.dark .instruct {
+    color: white;
+    background: #22272e;
+}
+/* DARK THEME -- END */
+
+@media (max-width: 1000px) {
+    .case {
         height: 80px;
         width: 15.5%;
     }
 }
-@media (max-width: 768px) 
-{
-    .amts
-    { 
+@media (max-width: 768px) {
+    .amts {
         padding-top: 15px;
         font-size: 15px;
-    } 
-    .case
-    {
+    }
+    .case {
         height: 55px;
         width: 31%;
         font-size: 25px;
-        
     }
-            
-    .caseOpening
-    {
+
+    .caseOpening {
         left: 15%;
+    }
+    .instruct {
+        font-size: 20px;
     }
 }
