--- a/Projects/BoardGames/Wordle/wordle.css
+++ b/Projects/BoardGames/Wordle/wordle.css
@@ -34,10 +34,12 @@ body {
 #theBoard {
     display: flex;
     flex-direction: column;
+    width: 310px;
 }
 #theBoard > .row {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 .toaster {
     padding: 20px 30px;
@@ -156,7 +158,7 @@ body.dark .instruct {
 @media (max-width: 950px) {
     .game > .controls,
     .game > #theBoard {
-        margin: 5px;
+        margin: 15px;
     }
     .controls {
         width: 500px;
